# TermiteRS

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  termite.docker.yml
agents/termite-config/: agent.yml  system.md
deploy/: nginx-termite.conf  termiters.service  termiters.tmpfiles.conf
src/: assistant.rs  cli.rs  command.rs  config.rs  daemon.rs  doctor.rs  git.rs  lib.rs  llm.rs  main.rs  notify.rs  report.rs  service.rs  sync.rs  text.rs
src/service/: conflicts.rs  dashboard.rs  db.rs  handlers.rs  jobs.rs  mod.rs  security.rs  state.rs  types.rs  util.rs
